--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -227,4 +227,6 @@
     <string name="this_alarm">Ten alarm</string>
     <string name="add_next_alarm_in_chain">+ Dodaj następny alarm w łańcuchu</string>
     <string name="failed_to_initialize_camera">Nie udało się zainicjować kamery</string>
+    <string name="emergency_disabled_repeating_alarm_notification_title">Powtarzający się alarm został wyłączony!</string>
+    <string name="emergency_disabled_repeating_alarm_notification_text">Zadanie awaryjne wyłączyło powtarzający się alarm. Aby ponownie go zaplanować, przejdź do strony alarmów.</string>
 </resources>
