--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -227,4 +227,6 @@
     <string name="this_alarm">Ця сигналізація</string>
     <string name="add_next_alarm_in_chain">+ Додати наступний будильник у ланцюжку</string>
     <string name="failed_to_initialize_camera">Не вдалося ініціалізувати камеру</string>
+    <string name="emergency_disabled_repeating_alarm_notification_title">Повторний будильник вимкнено!</string>
+    <string name="emergency_disabled_repeating_alarm_notification_text">Екстрене завдання вимкнуло ваш повторюваний будильник. Щоб знову його налаштувати, перейдіть на сторінку будильників.</string>
 </resources>
