--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -221,4 +221,5 @@
     <string name="failed_to_initialize_camera">Échec de l\'initialisation de la caméra</string>
     <string name="emergency_disabled_repeating_alarm_notification_title">Répétition de l\'alarme désactivée !</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">Une tâche d\'urgence a désactivé votre alarme répétitive. Pour la programmer à nouveau, rendez-vous sur la page des alarmes.</string>
+    <string name="standalone_app">Application indépendante</string>
 </resources>
