--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -221,4 +221,5 @@
     <string name="failed_to_initialize_camera">Falha ao inicializar a câmara</string>
     <string name="emergency_disabled_repeating_alarm_notification_title">Alarme repetitivo desativado!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">A tarefa de emergência desativou seu alarme repetitivo. Para programá-lo novamente, acesse a página de alarmes.</string>
+    <string name="standalone_app">Aplicativo independente</string>
 </resources>
