--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -221,4 +221,5 @@
     <string name="failed_to_initialize_camera">No se ha podido inicializar la cámara</string>
     <string name="emergency_disabled_repeating_alarm_notification_title">¡Alarma repetitiva desactivada!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">La tarea de emergencia ha desactivado tu alarma repetitiva. Para volver a programarla, visita la página de alarmas.</string>
+    <string name="standalone_app">Aplicación independiente</string>
 </resources>
