--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -214,4 +214,5 @@
     <string name="failed_to_initialize_camera">Kamerayı başlatılamadı</string>
     <string name="emergency_disabled_repeating_alarm_notification_title">Tekrar eden alarm devre dışı bırakıldı!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">Acil durum görevi, tekrar eden alarmınızı devre dışı bırakmıştır. Tekrar programlamak için alarmlar sayfasına gidin.</string>
+    <string name="standalone_app">Bağımsız uygulama</string>
 </resources>
