--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,4 +219,8 @@
     <string name="failed_to_initialize_camera">Failed to initialize camera</string>
     <string name="emergency_disabled_repeating_alarm_notification_title">Repeating alarm disabled!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">Emergency task has disabled your repeating alarm. In order to schedule it again visit the alarms page.</string>
+    <string name="qralarm_pro_itch_io_url" translatable="false">https://sweakpl.itch.io/qralarm-pro</string>
+    <string name="google_play" translatable="false">Google Play</string>
+    <string name="itch_io" translatable="false">itch.io</string>
+    <string name="standalone_app">Standalone app</string>
 </resources>
