Implemented dynamic theming support across the application by integrating user preferences for theme selection. Updated MainActivity, AlarmActivity, and Menu components to reflect dynamic theming settings, ensuring a cohesive user experience. Added necessary repository and data source methods to manage dynamic theming state.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,4 +223,5 @@
     <string name="google_play" translatable="false">Google Play</string>
     <string name="itch_io" translatable="false">itch.io</string>
     <string name="standalone_app">Standalone app</string>
+    <string name="dynamic_theme">Dynamic Theme</string>
 </resources>
