Handling dynamic theme changes in menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="classic_alarm">Classic alarm</string>
     <string name="rooster">Rooster</string>
     <string name="menu">Menu</string>
+    <string name="dynamic_theme">Dynamic theme</string>
     <string name="introduction">Introduction</string>
     <string name="everyday">Everyday</string>
     <string name="no_alarms">No alarms</string>
