Added translations for Dynamic theme

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -118,6 +118,7 @@
     <string name="classic_alarm">Klassischer Wecker</string>
     <string name="rooster">Hahn</string>
     <string name="menu">Menü</string>
+    <string name="dynamic_theme">Dynamisches Design</string>
     <string name="introduction">Einführung</string>
     <string name="everyday">Täglich</string>
     <string name="no_alarms">Keine Alarme</string>
