--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -125,6 +125,7 @@
     <string name="classic_alarm">Alarme clássico</string>
     <string name="rooster">Galo</string>
     <string name="menu">Menu</string>
+    <string name="dynamic_theme">Tema dinâmico</string>
     <string name="introduction">Introdução</string>
     <string name="everyday">Todos os dias</string>
     <string name="no_alarms">Nenhum alarme</string>
