--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -118,6 +118,7 @@
     <string name="classic_alarm">Klasik alarm</string>
     <string name="rooster">Horoz</string>
     <string name="menu">Menü</string>
+    <string name="dynamic_theme">Dinamik tema</string>
     <string name="introduction">Tanıtım</string>
     <string name="everyday">Her gün</string>
     <string name="no_alarms">Alarm yok</string>
