--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -111,6 +111,7 @@
     <string name="classic_alarm">经典闹钟</string>
     <string name="rooster">公鸡</string>
     <string name="menu">菜单</string>
+    <string name="dynamic_theme">动态主题</string>
     <string name="introduction">欢迎介绍页</string>
     <string name="everyday">每天</string>
     <string name="no_alarms">没有闹钟</string>
