--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -223,4 +223,7 @@
     <string name="emergency_disabled_repeating_alarm_notification_title">Allarme ripetuto disattivato!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">L\'attività di emergenza ha disattivato la tua sveglia ripetitiva. Per programmarla nuovamente, visita la pagina delle sveglie.</string>
     <string name="standalone_app">App indipendente</string>
+    <string name="theme">Tema</string>
+    <string name="custom_theme">Tema personalizzato</string>
+    <string name="custom_color">Colore personalizzato</string>
 </resources>
