--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -230,4 +230,7 @@
     <string name="emergency_disabled_repeating_alarm_notification_title">Повторний будильник вимкнено!</string>
     <string name="emergency_disabled_repeating_alarm_notification_text">Екстрене завдання вимкнуло ваш повторюваний будильник. Щоб знову його налаштувати, перейдіть на сторінку будильників.</string>
     <string name="standalone_app">Автономний додаток</string>
+    <string name="theme">Тема</string>
+    <string name="custom_theme">Користувацька тема</string>
+    <string name="custom_color">Нестандартний колір</string>
 </resources>
